syntax = "proto3";
package pb;
option go_package = "../pb";

message User {
  string id = 1;
  string name = 2;
  string email = 3;
}

message UserResultStream {
  string status = 1;
  User user = 2;
}

service UserService {
  rpc AddUser (User) returns (User);
  rpc AddUserVerbose (User) returns (stream UserResultStream);
}